--- a/src/app/private/containers/visitor/containers/documents/pending-documents/pending-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/pending-documents/pending-documents.component.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="card d-md-flex d-sm-block bg-white col-sm-12 col-md-12 col-lg-12 page-column">
+            <div class="d-sm-block bg-white col-sm-12 col-md-12 col-lg-12">
                 <div class="alert alert-warning fade show mt-3" role="alert" style="text-align: justify;">
                     <span class="font-icon-wrapper font-icon-md mr-2">
                         <i class="pe-7s-shield" size="medium"> </i>
@@ -27,7 +27,7 @@
                 </div>
 
                 <!---->
-                <div class="tabs-animation">
+                <div>
                     <div class="main-card mb-3 card">
                         <div class="card-header">
                             <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
@@ -35,7 +35,7 @@
                         </div>
                         <div class="card-body">
                 
-                            <table id="example2" class="table table-hover table-striped table-bordered">
+                            <table id="example1" class="table table-hover table-striped table-bordered">
                                 <thead>
                                     <tr>
                                         <th>#</th>
@@ -49,15 +49,15 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let item of data,let i = index" id="tr{{ item.id }}">
-                                        <td style="width: 4%">{{ i+1 }}</td>
-                                        <td style="width: 6%; text-align: center;">
+                                        <td>{{ i+1 }}</td>
+                                        <td class="text-center">
                                             <span class="badge badge-warning">pnd</span>
                                         </td>
-                                        <td style="width: 16%">{{ item?.name }}</td>
-                                        <td style="width: 27%">{{ item?.description }}</td>
-                                        <td style="width: 11%">{{ item?.file_number }} piece(s) jointe</td>
-                                        <td style="width: 19%">{{ parser(item?.created_at) }}</td>
-                                        <td style="width: 18%" class="text-center">
+                                        <td>{{ display(item?.name) }}</td>
+                                        <td>{{ display(item?.description) }}</td>
+                                        <td>{{ item?.file_number }} piece(s) jointe</td>
+                                        <td>{{ parser(item?.created_at) }}</td>
+                                        <td class="text-center">
                                             <div role="group" class="btn-group-sm btn-group">
                                                 <button class="mr-2 btn-icon btn-shadow btn btn-primary" ><i class="pe-7s-pen btn-icon-wrapper"> </i></button>
                                                 <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
