--- a/src/app/private/containers/visitor/containers/documents/rejected-documents/rejected-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/rejected-documents/rejected-documents.component.html
@@ -40,7 +40,7 @@
                                     <tr>
                                         <th>#</th>
                                         <th>badge</th>
-                                        <th>{{ 'RejectedDocument.Name' | translate}}/th>
+                                        <th>{{ 'RejectedDocument.Name' | translate}}</th>
                                         <th>{{ 'RejectedDocument.Description' | translate}}</th>
                                         <th>{{ 'RejectedDocument.JointFiles' | translate}}</th>
                                         <th>{{ 'RejectedDocument.SubmissionDate' | translate}}</th>
