--- a/src/app/private/containers/visitor/containers/profil/update-infos/update-info.component.css
+++ b/src/app/private/containers/visitor/containers/profil/update-infos/update-info.component.css
@@ -1,3 +1,19 @@
+.container-details div {
+  margin-top: 4%;
+}
+
+.invalid {
+  border: 1px solid red;
+}
+
+.form-control {
+  border: 2px solid grey;
+}
+
+.info-error-danger {
+  color: red !important;
+}
+
 button {
   right: 10px;
   position: absolute;
@@ -15,3 +31,19 @@ p {
   font-weight: bold;
   color: darkblue;
 }
+
+#my_file {
+  display: none;
+}
+
+#get_file {
+  cursor: pointer;
+}
+
+.bg-dark {
+  height: 80px;
+  width: 200px;
+  border: 1px solid brown;
+  border-radius: 10%;
+}
+
