--- a/src/app/private/containers/visitor/containers/documents/track-documents/track-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/track-documents/track-documents.component.html
@@ -8,57 +8,58 @@
                             <i class="pe-7s-phone icon-gradient bg-premium-dark">
                             </i>
                         </div>
-                        <div><span class="text-success"><h4>Suivie de dossier</h4></span> <strong><h5>Ceci est votre espace de travail</h5></strong>
+                        <div><span class="text-success"><h4>{{ 'FolderTracking.FolderFollowUp' | translate }}</h4></span> <strong><h5>{{ 'FolderTracking.WorkSpace' | translate }}</h5></strong>
                             <div class="page-title-subheading">
-                                A partir de cette interface vous pouvez suivre l'evolution
-                                d'un document que vous avez soumis
+                                {{ 'FolderTracking.FolderFollowUpView' | translate }}
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="card d-md-flex d-sm-block bg-white align-items-center col-sm-12 col-md-12 col-lg-12 page-column">
+        <div>
+            <div>
                 <div class="alert alert-warning fade show mt-3" role="alert" style="text-align: justify;">
                     <span class="font-icon-wrapper font-icon-md mr-2">
                         <i class="pe-7s-shield" size="medium"> </i>
                     </span>
-                    <strong><u>Note sur la securite:</u> </strong>  toutes vos donnees sont securisees et nous vous garantissions leur suivie et leur access en toute securite
+                    <strong><u>{{ 'FolderTracking.SecurityNote' | translate }}</u> </strong>  {{ 'FolderTracking.allDataSecured' | translate }}
                 </div>
-                <div class="mx-auto app-login-box mt-2 col-sm-12 col-md-10 col-lg-9">
-                    <div class="card page-title-subheading bg-premium-dark" style="text-align: justify; padding: 2%;color: white;">
-                        Pour consulter l'etat d'avancement d'un de vos dossier, vous devez saisir son numero
-                    </div>
-                    <div class="card" style="background-color: gainsboro; height: 280px;">
-                        <div *ngIf="isError" class="alert alert-danger alert-dismissible fade show" role="alert" style="text-align: justify;">
-                            <strong>{{ message?.title }}: </strong>{{ message?.content }}
-                            <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                            <div *ngIf="isSuccess" class="alert alert-success alert-dismissible fade show" role="alert" style="text-align: justify;">
-                            <strong>{{ message?.title }}: </strong>{{ message?.content }}
-                            <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div *ngIf="!track_id && !isSuccess && !isError" class="alert alert-info fade show text-center" role="alert" style="text-align: justify;">
-                            <i class="pe-7s-info mr-2"> </i>Saisir le numero du dossier juste en dessous
-                        </div>
+                
+                <div *ngIf="isError" class="alert alert-danger alert-dismissible fade show" role="alert" style="text-align: justify;">
+                    <strong>{{ message?.title }}: </strong>{{ message?.content }}
+                    <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div *ngIf="isSuccess" class="alert alert-success alert-dismissible fade show" role="alert" style="text-align: justify;">
+                    <strong>{{ message?.title }}: </strong>{{ message?.content }}
+                    <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="card">
                         <form (submit)="onSubmit()">
                             <div class="form-row">
-                                <div class="col-md-12 mt-3">
-                                    <input [(ngModel)]="track_id" name="track_id" class="form-control" type="text" placeholder="Saisir le numero de votre dossier ici" style="width: 70%; margin: auto;">
-                                </div>
+                                <input 
+                                    [(ngModel)]="track_id" 
+                                    name="track_id" 
+                                    class="form-control" 
+                                    type="text" 
+                                    placeholder="{{ 'FolderTracking.typeFolderNumber' | translate }}" 
+                                    style="width: 70%; margin: auto; margin-top: 25px;">
                             </div>
-                            <div class="mt-4">
-                                <div style="width: 100%; text-align: center; justify-content: center; align-items: center;">
+                            <div class="form-row mt-4">
+                                <div style="text-align: center; justify-content: center; align-items: center;">
                                     <button [disabled]="isLoading"
                                         class="btn btn-wide btn-shadow btn-hover-shine btn-success btn-sm"
-                                        style="width: 70%; justify-content: center; align-items: center; flex: 1; margin-right: 12.5%;">
+                                        style="justify-content: center; align-items: center; flex: 1;">
                                         <span *ngIf="!isLoading" style="font-size: medium; padding: 0px; margin: 5px;">
-                                            Voir l'etat d'avancement du dossier </span>
+                                            {{ 'FolderTracking.seeFolderProgression' | translate }} </span>
                                         <div *ngIf="isLoading" style="padding: 15px; margin-left: 50%;">
                                             <div class="ball-scale-multiple">
                                                 <div style="background-color: white;"></div>
@@ -70,6 +71,42 @@
                                 </div>    
                             </div>
                         </form>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-5 col-lg-12" style="margin-top: 50px;">
+                    <div class="mb-3 card">
+                        <div class="card-header-tab card-header">
+                            <div 
+                                class="card-header-title font-size-md text-capitalize font-weight-normal">
+                                POURCENTAGE D'EVOLUTION DU DOSSIER
+                            </div>
+                        </div>
+                        <div class="p-0 card-body" style="position: relative;">
+                            <div class="widget-content pt-0 w-100">
+                                <div class="widget-content-outer">
+                                    <div class="widget-content-wrapper">
+                                        <div class="widget-content-left pr-2 fsize-1">
+                                            <div class="widget-numbers mt-0 fsize-3 text-success">0%</div>
+                                        </div>
+                                        <div class="widget-content-right w-100">
+                                            <div class="progress-bar-lg progress">
+                                                <div 
+                                                    class="progress-bar bg-success" 
+                                                    role="progressbar" 
+                                                    aria-valuenow="0.5" 
+                                                    aria-valuemin="0" 
+                                                    aria-valuemax="100" 
+                                                    style="width: 0.5%;"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="widget-content-left fsize-1">
+                                        <div class="text-muted opacity-6">Etat actuel</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
