--- a/src/app/private/containers/visitor/containers/documents/track-documents/track-documents.component.html
+++ b/src/app/private/containers/visitor/containers/documents/track-documents/track-documents.component.html
@@ -79,7 +79,7 @@
                         <div class="card-header-tab card-header">
                             <div 
                                 class="card-header-title font-size-md text-capitalize font-weight-normal">
-                                POURCENTAGE D'EVOLUTION DU DOSSIER
+                                {{ 'FolderTracking.percentageProgress' | translate }}
                             </div>
                         </div>
                         <div class="p-0 card-body" style="position: relative;">
@@ -87,22 +87,25 @@
                                 <div class="widget-content-outer">
                                     <div class="widget-content-wrapper">
                                         <div class="widget-content-left pr-2 fsize-1">
-                                            <div class="widget-numbers mt-0 fsize-3 text-success">0%</div>
+                                            <div class="widget-numbers mt-0 fsize-3 {{ textColor }}">{{ folderProgression? folderProgression: 0}}%</div>
                                         </div>
                                         <div class="widget-content-right w-100">
                                             <div class="progress-bar-lg progress">
                                                 <div 
-                                                    class="progress-bar bg-success" 
+                                                    class="progress-bar {{ computeBgProgressBar() }}" 
                                                     role="progressbar" 
-                                                    aria-valuenow="0.5" 
+                                                    ([aria-valuenow])="folderProgression" 
                                                     aria-valuemin="0" 
                                                     aria-valuemax="100" 
-                                                    style="width: 0.5%;"></div>
+                                                    [style.width]="folderProgression + '%'"></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="widget-content-left fsize-1">
-                                        <div class="text-muted opacity-6">Etat actuel</div>
+                                        <div class="text-muted opacity-6">{{ 'FolderTracking.folderState' | translate }}</div>
+                                    </div>
+                                    <div *ngIf="trackService" class="widget-content-right fsize-1">
+                                        <div class="text-muted opacity-6">Votre dossier {{ computeStatus() }} dans le service nommé <strong>{{ trackService? trackService.name: '' }}</strong></div>
                                     </div>
                                 </div>
                             </div>
