--- a/src/app/private/containers/administrator/containers/documents/accepted-documents/accepted-documents.component.html
+++ b/src/app/private/containers/administrator/containers/documents/accepted-documents/accepted-documents.component.html
@@ -8,9 +8,9 @@
                             <i class="pe-7s-phone icon-gradient bg-premium-dark">
                             </i>
                         </div>
-                        <div><span class="text-success"><h4>{{ 'ArchivedDocument.ArchivedFiles' | translate }}</h4></span> <strong><h5>{{ 'AcceptedDocument.Workspace' | translate }}</h5></strong>
+                        <div><span class="text-success"><h4>{{ 'AdminAcceptedDocument.Foldersintreatment' | translate }}</h4></span> <strong><h5>{{ 'AdminAcceptedDocument.Workspace' | translate }}</h5></strong>
                             <div class="page-title-subheading">
-                                {{ 'ArchivedDocument.ViewAllFoldersInterface' | translate }}
+                                {{ 'AdminAcceptedDocument.ViewAllFoldersInterface' | translate }}
                             </div>
                         </div>
                     </div>
@@ -23,7 +23,7 @@
                     <span class="font-icon-wrapper font-icon-md mr-2">
                         <i class="pe-7s-shield" size="medium"> </i>
                     </span>
-                    <strong><u>{{ 'ArchivedDocument.NoteSecurite1' | translate}}</u> </strong> {{ 'ArchivedDocument.NoteSecurite2' | translate}}
+                    <strong><u>{{ 'AdminAcceptedDocument.NoteSecurite1' | translate }}</u> </strong>  {{ 'AdminAcceptedDocument.NoteSecurite2' | translate }}
                 </div>
 
                 <!---->
@@ -31,36 +31,50 @@
                     <div class="main-card mb-3 card">
                         <div class="card-header">
                             <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
-                            {{ 'ArchivedDocument.ArchivedFolders' | translate}}
+                            {{ 'AdminAcceptedDocument.Foldersintreatment' | translate }}
                         </div>
                         <div class="card-body">
                 
-                            <table id="example2" class="table table-hover table-striped table-bordered">
+                            <table id="example2" class="table table-hover table-striped table-bordered dataTables_wrapper dt-bootstrap4">
                                 <thead>
                                     <tr>
                                         <th>#</th>
                                         <th>badge</th>
-                                        <th>{{ 'ArchivedDocument.Name' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.Description' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.JointFiles' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.SubmissionDate' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.Actions' | translate}}</th>
+                                        <th>{{ 'AdminAcceptedDocument.Name' | translate }}</th>
+                                        <th>{{ 'AdminAcceptedDocument.JointFiles' | translate }}</th>
+                                        <th>{{ 'AdminAcceptedDocument.SubmissionDate' | translate }}</th>
+                                        <th class="text-center">{{ 'AdminAcceptedDocument.Percentage' | translate }}</th>
+                                        <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let item of data,let i = index" id="tr{{ item.id }}">
                                         <td>{{ i+1 }}</td>
                                         <td class="text-center">
-                                            <span class="badge badge-info">arch</span>
+                                            <span class="badge badge-primary">inprcs</span>
                                         </td>
                                         <td>{{ display(item?.name) }}</td>
-                                        <td>{{ display(item?.description) }}</td>
                                         <td>{{ item?.file_number }} piece(s) jointe</td>
                                         <td>{{ parser(item?.created_at) }}</td>
                                         <td class="text-center">
+                                            <div class="widget-content p-0">
+                                                <div class="widget-content-outer">
+                                                    <div class="widget-content-wrapper">
+                                                        <div class="widget-content-left pr-2">
+                                                            <div class="widget-numbers fsize-1 text-primary">71%</div>
+                                                        </div>
+                                                        <div class="widget-content-right w-100">
+                                                            <div class="progress-bar-xs progress">
+                                                                <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="71" aria-valuemin="0" aria-valuemax="100" style="width: 71%;"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="text-center">
                                             <div role="group" class="btn-group-sm btn-group">
                                                 <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="cliquer pour voir les details"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
-                                                <button class="mr-2 btn-icon btn-icon-only btn btn-danger" (click)="delete(item)" title="cliquer pour supprimer"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
                                             </div>
                                         </td>
                                     </tr>
@@ -68,13 +82,13 @@
                                 <tfoot *ngIf="loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
                                         <div class="spinner-border spinner-sm">
-                                            <span class="sr-only">{{ 'ArchivedDocument.PleaseWait' | translate}}</span>
+                                            <span class="sr-only">{{ 'AdminAcceptedDocument.PleaseWait' | translate }}</span>
                                         </div>
                                     </td>
                                 </tfoot>
                                 <tfoot *ngIf="!loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
-                                        {{ 'ArchivedDocument.EmptyList' | translate}}
+                                        {{ 'AdminAcceptedDocument.EmptyList' | translate }}
                                     </td>
                                 </tfoot>
                             </table>
