--- a/src/app/private/containers/administrator/containers/documents/pending-documents/pending-documents.component.html
+++ b/src/app/private/containers/administrator/containers/documents/pending-documents/pending-documents.component.html
@@ -8,9 +8,9 @@
                             <i class="pe-7s-phone icon-gradient bg-premium-dark">
                             </i>
                         </div>
-                        <div><span class="text-success"><h4>{{ 'ArchivedDocument.ArchivedFiles' | translate }}</h4></span> <strong><h5>{{ 'AcceptedDocument.Workspace' | translate }}</h5></strong>
+                        <div><span class="text-success"><h4>{{ 'AdminPendingDocument.PendingFiles' | translate }}</h4></span> <strong><h5>{{ 'AdminPendingDocument.Workspace' | translate }}</h5></strong>
                             <div class="page-title-subheading">
-                                {{ 'ArchivedDocument.ViewAllFoldersInterface' | translate }}
+                                {{ 'AdminPendingDocument.ViewAllFoldersInterface' | translate }}
                             </div>
                         </div>
                     </div>
@@ -18,40 +18,40 @@
             </div>
         </div>
         <div class="row">
-            <div class="card d-md-flex d-sm-block bg-white col-sm-12 col-md-12 col-lg-12 page-column">
+            <div class="d-sm-block bg-white col-sm-12 col-md-12 col-lg-12">
                 <div class="alert alert-warning fade show mt-3" role="alert" style="text-align: justify;">
                     <span class="font-icon-wrapper font-icon-md mr-2">
                         <i class="pe-7s-shield" size="medium"> </i>
                     </span>
-                    <strong><u>{{ 'ArchivedDocument.NoteSecurite1' | translate}}</u> </strong> {{ 'ArchivedDocument.NoteSecurite2' | translate}}
+                    <strong><u>{{ 'AdminPendingDocument.NoteSecurite1' | translate}}</u> </strong> {{ 'AdminPendingDocument.NoteSecurite2' | translate}}
                 </div>
 
                 <!---->
-                <div class="tabs-animation">
+                <div>
                     <div class="main-card mb-3 card">
                         <div class="card-header">
                             <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
-                            {{ 'ArchivedDocument.ArchivedFolders' | translate}}
+                            {{ 'AdminPendingDocument.PendingFolders' | translate}}
                         </div>
                         <div class="card-body">
                 
-                            <table id="example2" class="table table-hover table-striped table-bordered">
+                            <table id="example1" class="table table-hover table-striped table-bordered">
                                 <thead>
                                     <tr>
                                         <th>#</th>
                                         <th>badge</th>
-                                        <th>{{ 'ArchivedDocument.Name' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.Description' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.JointFiles' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.SubmissionDate' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.Actions' | translate}}</th>
+                                        <th>{{ 'AdminPendingDocument.Name' | translate}}</th>
+                                        <th>{{ 'AdminPendingDocument.Description' | translate}}</th>
+                                        <th>{{ 'AdminPendingDocument.JointFiles' | translate}}</th>
+                                        <th>{{ 'AdminPendingDocument.SubmissionDate' | translate}}</th>
+                                        <th>{{ 'AdminPendingDocument.Actions' | translate}}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let item of data,let i = index" id="tr{{ item.id }}">
                                         <td>{{ i+1 }}</td>
                                         <td class="text-center">
-                                            <span class="badge badge-info">arch</span>
+                                            <span class="badge badge-warning">pnd</span>
                                         </td>
                                         <td>{{ display(item?.name) }}</td>
                                         <td>{{ display(item?.description) }}</td>
@@ -60,7 +60,6 @@
                                         <td class="text-center">
                                             <div role="group" class="btn-group-sm btn-group">
                                                 <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="cliquer pour voir les details"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
-                                                <button class="mr-2 btn-icon btn-icon-only btn btn-danger" (click)="delete(item)" title="cliquer pour supprimer"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
                                             </div>
                                         </td>
                                     </tr>
@@ -68,13 +67,13 @@
                                 <tfoot *ngIf="loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
                                         <div class="spinner-border spinner-sm">
-                                            <span class="sr-only">{{ 'ArchivedDocument.PleaseWait' | translate}}</span>
+                                            <span class="sr-only">{{ 'AdminPendingDocument.PleaseWait' | translate}}</span>
                                         </div>
                                     </td>
                                 </tfoot>
                                 <tfoot *ngIf="!loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
-                                        {{ 'ArchivedDocument.EmptyList' | translate}}
+                                        {{ 'AdminPendingDocument.EmptyList' | translate}}
                                     </td>
                                 </tfoot>
                             </table>
