--- a/src/app/private/containers/administrator/containers/documents/rejected-documents/rejected-documents.component.html
+++ b/src/app/private/containers/administrator/containers/documents/rejected-documents/rejected-documents.component.html
@@ -8,9 +8,9 @@
                             <i class="pe-7s-phone icon-gradient bg-premium-dark">
                             </i>
                         </div>
-                        <div><span class="text-success"><h4>{{ 'ArchivedDocument.ArchivedFiles' | translate }}</h4></span> <strong><h5>{{ 'AcceptedDocument.Workspace' | translate }}</h5></strong>
+                        <div><span class="text-success"><h4>{{ 'AdminRejectedDocument.RejectedFiles' | translate }}</h4></span> <strong><h5>{{ 'AdminRejectedDocument.Workspace' | translate }}</h5></strong>
                             <div class="page-title-subheading">
-                                {{ 'ArchivedDocument.ViewAllFoldersInterface' | translate }}
+                                {{ 'AdminRejectedDocument.ViewAllFoldersInterface' | translate }}
                             </div>
                         </div>
                     </div>
@@ -23,7 +23,7 @@
                     <span class="font-icon-wrapper font-icon-md mr-2">
                         <i class="pe-7s-shield" size="medium"> </i>
                     </span>
-                    <strong><u>{{ 'ArchivedDocument.NoteSecurite1' | translate}}</u> </strong> {{ 'ArchivedDocument.NoteSecurite2' | translate}}
+                    <strong><u>{{ 'AdminRejectedDocument.NoteSecurite1' | translate}}</u> </strong>  {{ 'AdminRejectedDocument.NoteSecurite2' | translate}}
                 </div>
 
                 <!---->
@@ -31,7 +31,7 @@
                     <div class="main-card mb-3 card">
                         <div class="card-header">
                             <i class="header-icon pe-7s-shield icon-gradient bg-love-kiss"> </i>
-                            {{ 'ArchivedDocument.ArchivedFolders' | translate}}
+                            {{ 'AdminRejectedDocument.RejectedFolders' | translate}}
                         </div>
                         <div class="card-body">
                 
@@ -40,24 +40,24 @@
                                     <tr>
                                         <th>#</th>
                                         <th>badge</th>
-                                        <th>{{ 'ArchivedDocument.Name' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.Description' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.JointFiles' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.SubmissionDate' | translate}}</th>
-                                        <th>{{ 'ArchivedDocument.Actions' | translate}}</th>
+                                        <th>{{ 'AdminRejectedDocument.Name' | translate}}</th>
+                                        <th>{{ 'AdminRejectedDocument.Description' | translate}}</th>
+                                        <th>{{ 'AdminRejectedDocument.JointFiles' | translate}}</th>
+                                        <th>{{ 'AdminRejectedDocument.SubmissionDate' | translate}}</th>
+                                        <th>{{ 'AdminRejectedDocument.Actions' | translate}}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let item of data,let i = index" id="tr{{ item.id }}">
                                         <td>{{ i+1 }}</td>
                                         <td class="text-center">
-                                            <span class="badge badge-info">arch</span>
+                                            <span class="badge badge-danger">rjt</span>
                                         </td>
                                         <td>{{ display(item?.name) }}</td>
                                         <td>{{ display(item?.description) }}</td>
                                         <td>{{ item?.file_number }} piece(s) jointe</td>
                                         <td>{{ parser(item?.created_at) }}</td>
-                                        <td class="text-center">
+                                        <td>
                                             <div role="group" class="btn-group-sm btn-group">
                                                 <button class="mr-2 btn-icon btn-icon-only btn btn-success" (click)="details(item)" title="cliquer pour voir les details"><i class="pe-7s-info btn-icon-wrapper"> </i></button>
                                                 <button class="mr-2 btn-icon btn-icon-only btn btn-danger" (click)="delete(item)" title="cliquer pour supprimer"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
@@ -68,13 +68,13 @@
                                 <tfoot *ngIf="loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
                                         <div class="spinner-border spinner-sm">
-                                            <span class="sr-only">{{ 'ArchivedDocument.PleaseWait' | translate}}</span>
+                                            <span class="sr-only">{{ 'AdminRejectedDocument.PleaseWait' | translate}}</span>
                                         </div>
                                     </td>
                                 </tfoot>
                                 <tfoot *ngIf="!loading && (!data || !data.length)">
                                     <td colspan="7" class="text-center">
-                                        {{ 'ArchivedDocument.EmptyList' | translate}}
+                                        {{ 'AdminRejectedDocument.EmptyList' | translate}}
                                     </td>
                                 </tfoot>
                             </table>
