Création de l'espace de l'employé

--- a/src/app/private/containers/visitor/containers/visitor-home/visitor-home.component.html
+++ b/src/app/private/containers/visitor/containers/visitor-home/visitor-home.component.html
@@ -59,7 +59,7 @@
                                     <i class="lnr-trash text-white"></i></div>
                                 <div class="widget-chart-content">
                                     <div class="widget-subheading">{{ 'VisitorHome.allRejectedFolders' | translate }}</div>
-                                    <div class="widget-numbers">{{ rejectedFolders ? rejectedFolders.length : 0 }}</div>
+                                    <div class="widget-numbers text-danger">{{ rejectedFolders ? rejectedFolders.length : 0 }}</div>
                                 </div>
                             </div>
                             <div class="divider m-0 d-md-none d-sm-block"></div>
