--- a/src/app/private/containers/employee/containers/index/left-side/left-side.component.html
+++ b/src/app/private/containers/employee/containers/index/left-side/left-side.component.html
@@ -35,65 +35,33 @@
             <ul class="vertical-nav-menu metismenu">
                 <li class="app-sidebar__heading">Menu</li>
                 <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
+                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.dossiers')">
                         <i class="metismenu-icon pe-7s-rocket"></i>
-                        {{"LeftSide.TodayOne" | translate }}
+                        {{ "AdminLeftSide.MyFiles" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
-                    <ul class="today8 mm-collapse">
+                    <ul class="dossiers mm-collapse">
                         <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
+                            <a href="javascript:void(0);" (click)="activeMenu.menu0=4;goTo('/create-folder')"
+                                class="{{ activeMenu.menu0 == 4 ? 'mm-active': ''}}">
                                 <i class="metismenu-icon">
-                                </i>...
+                                </i>Creer dossier
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
+                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.profil')">
                         <i class="metismenu-icon pe-7s-rocket"></i>
-                        {{"LeftSide.TodayTwo" | translate }}
+                        {{ "AdminLeftSide.Profile" | translate }}
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
-                    <ul class="today8 mm-collapse">
+                    <ul class="profil mm-collapse">
                         <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
+                            <a href="javascript:void(0);" (click)="activeMenu.menu1=1;goTo('/profil/modify-my-informations')"
+                                class="{{ activeMenu.menu1 == 1 ? 'mm-active': ''}}">
                                 <i class="metismenu-icon">
-                                </i>...
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
-                        {{"LeftSide.TodayThree" | translate }}
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-                    </a>
-                    <ul class="today8 mm-collapse">
-                        <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                                <i class="metismenu-icon">
-                                </i>...
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
-                        {{"LeftSide.TodayFour" | translate }}
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-                    </a>
-                    <ul class="today8 mm-collapse">
-                        <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                                <i class="metismenu-icon">
-                                </i>...
+                                </i>{{ "AdminLeftSide.ModifyProfile" | translate }}
                             </a>
                         </li>
                     </ul>
