Mise a jour de la création d'un dossier et envoie du mail avec la description du service

--- a/src/app/public/containers/sign-up/sign-up.component.html
+++ b/src/app/public/containers/sign-up/sign-up.component.html
@@ -32,7 +32,7 @@
                         <div>{{ 'SignUp.WelcomeBack' | translate }}</div>
                     </h3>
                     <h6 class="mb-3">
-                        <strong>{{ 'SignUp.Formulaire' | translate }} <span class="text-success">{{ 'SignUp.Compte' | translate }} </span> sur GEPAD</strong>
+                        <strong>{{ 'SignUp.Formulaire' | translate }} <span class="text-success">{{ 'SignUp.Compte' | translate }} </span> {{ 'SignUp.SurGepad' | translate }}</strong>
                     </h6>
                     <div>
                         <div *ngIf="isError" class="alert alert-danger alert-dismissible fade show" role="alert">
